Making a branch for Servlet Service Framework 1.0.x.
git-svn-id: https://svn.apache.org/repos/asf/cocoon/branches/cocoon-servlet-service-1.0.0@639706 13f79535-47bb-0310-9956-ffa450edef68